fix contrast warnings by making background brighter

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -39,6 +39,20 @@
 .td-navbar {
     background: rgb(2,0,36);
     background: linear-gradient(153deg, rgba(2,0,36,1) 0%, rgba(146,1,138,1) 62%, rgba(55,173,176,1) 100%);
+
+    a {
+        color: rgb(250, 248, 242);
+    }
+
+    a:hover {
+        // text-decoration: underline;
+        // color: rgb(250, 248, 242);
+        color: rgb(255, 127, 131);
+    }
+
+    li .active {
+        text-decoration: underline;
+    }
 }
 
 .readmorelink {
