--- a/assets/scss/_variables_project.scss
+++ b/assets/scss/_variables_project.scss
@@ -9,15 +9,15 @@ $google_font_name: "Titillium Web" !default;
 $google_font_family: "Titillium Web:300,300i,400,400i,700,700i" !default;
 
 
-$white: #faf8f2;
+$white: rgb(250, 255, 250);
 $font-size-base: 1.1rem !default;
 $font-weight-normal: 400 !default;
 $font-weight-bold: 700 !default;
 
 
-// Navbar
-$navbar-dark-color: rgba($white, 0.75) !default;      // TODO: consider moving into UG SCSS
-$navbar-dark-hover-color: rgba($white, 0.5) !default; // TODO: consider moving into UG SCSS
+// Navbar -- replaced in my _styles_project.scss
+// $navbar-dark-color: rgba($white, 0.75) !default;      // TODO: consider moving into UG SCSS
+// $navbar-dark-hover-color: rgba($white, 0.5) !default; // TODO: consider moving into UG SCSS
 
 $enable-gradients: true;
 $primary: #BA5624 !default;
